--- a/ChengYuDaHuiGame/res/layout/chengyu_content.xml
+++ b/ChengYuDaHuiGame/res/layout/chengyu_content.xml
@@ -25,8 +25,11 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/text_box_bg"
+            android:background="@drawable/corner_rect_bg_selector"
+            android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="copyText"
+            android:padding="5dp"
             android:textSize="14sp" />
 
         <TextView
@@ -45,8 +48,11 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/text_box_bg"
+            android:background="@drawable/corner_rect_bg_selector"
+            android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="copyText"
+            android:padding="5dp"
             android:textSize="14sp" />
 
         <TextView
@@ -65,8 +71,11 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/text_box_bg"
+            android:background="@drawable/corner_rect_bg_selector"
+            android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="copyText"
+            android:padding="5dp"
             android:textSize="14sp" />
 
         <TextView
@@ -85,8 +94,11 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/text_box_bg"
+            android:background="@drawable/corner_rect_bg_selector"
+            android:clickable="true"
             android:gravity="center_vertical"
+            android:onClick="copyText"
+            android:padding="5dp"
             android:textSize="14sp" />
 
         <TextView
@@ -97,27 +109,40 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_chengyu_more"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/text_box_bg"
-            android:gravity="center_vertical"
-            android:text="点击查看近义词、反义词、典故、英文等更多内容"
-            android:textSize="14sp" />
+            android:background="@drawable/corner_rect_bg_selector"
+            android:clickable="true"
+            android:onClick="getMore"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="10dp" >
 
-        <!-- 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/list_click_item_selector"
-            android:text="查看近义词、反义词等更多内容"
-            android:textSize="14sp" />
-             -->
+            <ImageView
+                android:id="@+id/iv_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_arrow" />
+
+            <TextView
+                android:id="@+id/tv_chengyu_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/iv_arrow"
+                android:text="点击查看更多内容"
+                android:textSize="14sp" />
+        </RelativeLayout>
     </LinearLayout>
 
 </ScrollView>
