--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -25,15 +25,16 @@
         <LinearLayout
             android:id="@+id/first_layout"
             android:layout_width="75dip"
-            android:layout_height="95dip"
+            android:layout_height="100dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/first_pinyin"
                 android:layout_width="75dip"
-                android:layout_height="20dip"
-                android:gravity="center" />
+                android:layout_height="25dip"
+                android:gravity="center_horizontal"
+                android:textSize="20sp" />
 
             <FrameLayout
                 android:layout_width="75dip"
@@ -62,7 +63,7 @@
         <LinearLayout
             android:id="@+id/second_layout"
             android:layout_width="75dip"
-            android:layout_height="95dip"
+            android:layout_height="100dip"
             android:layout_marginLeft="1dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
@@ -70,8 +71,9 @@
             <TextView
                 android:id="@+id/second_pinyin"
                 android:layout_width="75dip"
-                android:layout_height="20dip"
-                android:gravity="center" />
+                android:layout_height="25dip"
+                android:gravity="center"
+                android:textSize="20sp" />
 
             <FrameLayout
                 android:layout_width="75dip"
@@ -100,7 +102,7 @@
         <LinearLayout
             android:id="@+id/third_layout"
             android:layout_width="75dip"
-            android:layout_height="95dip"
+            android:layout_height="100dip"
             android:layout_marginLeft="1dip"
             android:layout_marginRight="1dip"
             android:orientation="vertical" >
@@ -108,8 +110,9 @@
             <TextView
                 android:id="@+id/third_pinyin"
                 android:layout_width="75dip"
-                android:layout_height="20dip"
-                android:gravity="center" />
+                android:layout_height="25dip"
+                android:gravity="center"
+                android:textSize="20sp" />
 
             <FrameLayout
                 android:layout_width="75dip"
@@ -138,15 +141,16 @@
         <LinearLayout
             android:id="@+id/fourth_layout"
             android:layout_width="75dip"
-            android:layout_height="95dip"
+            android:layout_height="100dip"
             android:layout_marginLeft="1dip"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/fourth_pinyin"
                 android:layout_width="75dip"
-                android:layout_height="20dip"
-                android:gravity="center" />
+                android:layout_height="25dip"
+                android:gravity="center"
+                android:textSize="20sp" />
 
             <FrameLayout
                 android:layout_width="75dip"
@@ -253,6 +257,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/dictate_original"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -272,6 +277,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/dictate_example"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
@@ -291,6 +297,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/dictate_allusion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
