--- a/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rl_app_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/card_bg"
+    android:background="@drawable/dl_card_bg"
     android:gravity="center_vertical"
     android:orientation="vertical" >
 
