--- a/ChengYuDaHuiGame/res/layout/knowledge_activity_main.xml
+++ b/ChengYuDaHuiGame/res/layout/knowledge_activity_main.xml
@@ -40,13 +40,14 @@
         android:background="@drawable/title_chengyu_bg" >
 
         <TextView
+            android:id="@+id/tv_item_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="知识闯关"
-            android:textSize="25sp"
+            android:text="看图猜成语"
             android:textColor="@android:color/black"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -56,32 +57,26 @@
             android:layout_alignParentLeft="true"
             android:clickable="true"
             android:padding="10dp"
-            android:src="@drawable/ic_back_selector" />
+            android:src="@drawable/ic_back_selector" 
+            android:onClick="onClickBack"
+            />
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/title"
         android:layout_marginBottom="10dp"
         android:background="@drawable/activity_middle"
-        android:orientation="vertical"
         android:paddingBottom="5dp"
         android:paddingTop="5dp" >
 
-        <ListView 
-            android:id="@+id/lv_knowledge"
+        <FrameLayout
+            android:id="@+id/fl_knowledge_item"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@null"
-            android:dividerHeight="4dp"
-			android:listSelector="@android:color/transparent"
-			android:padding="16dp"
-            android:scrollbarStyle="outsideInset"
-            android:cacheColorHint="#ff0000"
-            android:fadingEdge="none"
-            ></ListView>
-
-    </LinearLayout>
+            android:layout_height="match_parent" >
+        </FrameLayout>
+            
+    </RelativeLayout>
 
 </RelativeLayout>
