--- a/ChengYuDaHuiGame/res/layout/nifty_dialog_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/nifty_dialog_layout.xml
@@ -1,23 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-/*
-** Copyright 2010, The Android Open Source Project
-**
-** Licensed under the Apache License, Version 2.0 (the "License");
-** you may not use this file except in compliance with the License.
-** You may obtain a copy of the License at
-**
-**     http://www.apache.org/licenses/LICENSE-2.0
-**
-** Unless required by applicable law or agreed to in writing, software
-** distributed under the License is distributed on an "AS IS" BASIS,
-** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-** See the License for the specific language governing permissions and
-** limitations under the License.
-*/
-
-https://github.com/android/platform_frameworks_base/blob/master/core/res/res/layout/alert_dialog_holo.xml
-
--->
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -26,7 +7,6 @@ https://github.com/android/platform_frameworks_base/blob/master/core/res/res/lay
     android:paddingRight="25dp">
 
     <LinearLayout
-
         android:id="@+id/parentPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,7 +78,7 @@ https://github.com/android/platform_frameworks_base/blob/master/core/res/res/lay
                 android:paddingStart="16dip"
                 android:paddingTop="8dip"
                 android:textColor="#000000"
-                android:textIsSelectable="true" />
+                />
         </LinearLayout>
 
         <FrameLayout
@@ -127,5 +107,19 @@ https://github.com/android/platform_frameworks_base/blob/master/core/res/res/lay
                 android:text="Cancle"
                 android:visibility="gone" />
         </LinearLayout>
+        
+        <TextView
+                android:id="@+id/tv_nifty_tip"
+                style="?android:attr/textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingBottom="8dip"
+                android:paddingEnd="16dip"
+                android:paddingStart="16dip"
+                android:paddingTop="8dip"
+                android:textColor="#000000"
+                />
     </LinearLayout>
 </RelativeLayout>
