--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -46,6 +46,7 @@
             android:layout_alignParentRight="true"
             android:clickable="true"
             android:padding="10dp"
+            android:layout_marginRight="20dp"
             android:src="@drawable/ic_settings_selector" />
     </RelativeLayout>
 
