--- a/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
+++ b/ChengYuDaHuiGame/res/layout/picture_guess_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="174dp"
         android:layout_alignParentTop="true"
-        android:layout_margin="16dp"
+        android:layout_margin="10dp"
         android:background="@drawable/img_bg"
         android:gravity="center"
         android:orientation="horizontal"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="16dp"
@@ -45,26 +45,13 @@
         android:gravity="center"
         android:orientation="horizontal" >
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" >
-
-            <ImageView
-                android:id="@+id/iv_cy_tip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:scaleType="centerInside"
-                android:src="@drawable/cy_word" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="提示"
-                android:textColor="@android:color/black" />
-        </RelativeLayout>
+        <Button
+            android:id="@+id/btn_cy_tip"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/short_btn_bg_selector"
+            android:text="提示"/>
 
         <com.zhaoyan.juyou.game.chengyudahui.knowledge.AnswerButton
             android:id="@+id/btn_answer_01"
@@ -109,27 +96,14 @@
             android:clickable="false"
             android:padding="0dp"
             android:textColor="@android:color/black" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp" >
-
-            <ImageView
-                android:id="@+id/iv_cy_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:scaleType="centerInside"
-                android:src="@drawable/cy_word" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="分享"
-                android:textColor="@android:color/black" />
-        </RelativeLayout>
+        
+        <Button
+            android:id="@+id/btn_cy_share"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/short_btn_bg_selector"
+            android:text="分享"/>
     </LinearLayout>
 
 </RelativeLayout>
